Добавление контрола для вкладки переименования

--- a/MultipleCopyUtil/MultipleCopyUtil.csproj
+++ b/MultipleCopyUtil/MultipleCopyUtil.csproj
@@ -63,6 +63,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Controls\RenameTab.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -73,6 +77,9 @@
     </Compile>
     <Compile Include="Controls\CopyTab.xaml.cs">
       <DependentUpon>CopyTab.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Controls\RenameTab.xaml.cs">
+      <DependentUpon>RenameTab.xaml</DependentUpon>
     </Compile>
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
